--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <main>
     <section>
-        <img src="images/image-product-desktop.jpg" alt="">
+        <img src="images/image-product-desktop.jpg" alt="" class="image">
       <div class="content">
         <h2>Perfume</h2>
       <h1>Gabrielle Essence Eau De Parfum</h1>
