--- a/index.html
+++ b/index.html
@@ -1,46 +1,72 @@
 <!DOCTYPE html>
+<!-- Defines the document type as HTML -->
 <html lang="en">
+<!-- Starts the HTML document with English as the language -->
 
 <head>
+  <!-- Contains meta-information about the document -->
   <meta charset="UTF-8">
+  <!-- Sets the character encoding to UTF-8 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
+  <!-- Defines the viewport for responsive design -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <!-- Links the website's favicon for display in the browser tab -->
 
   <link rel="stylesheet" href="css/main.css">
+  <!-- Links the main CSS file for styling -->
 
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap" rel="stylesheet">
+  <!-- Preconnects to Google Fonts server -->
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Preconnects to Google Fonts server with cross-origin attribute -->
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700&family=Montserrat:wght@500;700&display=swap"
+    rel="stylesheet">
+  <!-- Links the specified Google Fonts for use in the document -->
 
 
   <title>Frontend Mentor | Product preview card component</title>
-
+  <!-- Sets the title of the webpage -->
 </head>
 
 <body>
+  <!-- Contains the main content of the webpage -->
 
   <main>
+    <!-- Main content section of the webpage -->
     <section>
-        <img src="images/image-product-desktop.jpg" alt="" class="image">
+      <!-- Section within the main content -->
+      <img src="images/image-product-desktop.jpg" alt="" class="image">
+      <!-- Displays an image with a specified source and class -->
       <div class="content">
+        <!-- Container for the content -->
         <h2>Perfume</h2>
-      <h1>Gabrielle Essence Eau De Parfum</h1>
-      <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
-        Perfumer-Creator for the House of CHANEL.</p>
-      <p><span class="big">$149.99</span>  <span class="small"> $169.99</span></p>
-      <button><img src="images/icon-cart.svg" alt="cart-icon">Add to Cart</button>
+        <!-- Heading level 2 for the product type -->
+        <h1>Gabrielle Essence Eau De Parfum</h1>
+        <!-- Heading level 1 for the product name -->
+        <p>A floral, solar and voluptuous interpretation composed by Olivier Polge,
+          Perfumer-Creator for the House of CHANEL.</p>
+        <!-- Paragraph describing the product -->
+        <p><span class="big">$149.99</span> <span class="small"> $169.99</span></p>
+        <!-- Paragraph with spans for styling -->
+        <button><img src="images/icon-cart.svg" alt="cart-icon">Add to Cart</button>
+        <!-- Button with an image and text -->
       </div>
     </section>
   </main>
+
   <footer>
-    <!-- <div class="attribution">
+    <!-- Footer section of the webpage -->
+    <div class="attribution">
+      <!-- Container for attribution information -->
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>   -->
+      <!-- Link to Frontend Mentor challenge with target attribute set to open in a new tab -->
+      Coded by <a href="https://kerdaino.github.io/portfolio/" target="_blank">Tobi Adekunle (kerdaino dev)</a>.
+      <!-- Link to the coder's portfolio with target attribute set to open in a new tab -->
+    </div>
   </footer>
+
 </body>
 
 </html>
